# relic-fullstack

./: .dockerignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  rustfmt.toml
assets/: main.css
kube/: deploy.yaml
misc/: next.json  template.json
src/: main.rs
src/asset/: icon.rs
src/character/: aspects.rs  attribute.rs  blank.rs  build.rs  components.rs  expertise.rs  fillable.rs  flow.rs  mod.rs  pool.rs  progression.rs  resistance.rs  resistance_dodge.rs  resource.rs  sheet.rs  training.rs
src/common/: mod.rs  sized.rs
src/component/: toggle.rs
src/equipment/: armor.rs  mod.rs  weapon.rs
src/filter/: component.rs  mod.rs  sets.rs
src/keyword/: aspect.rs  classifiers.rs  filter.rs  mod.rs  tense.rs  term.rs
src/modifiers/: aggregators.rs  aspect.rs  dependant.rs  display.rs  mod.rs  operator.rs
src/operator/: mod.rs  optional.rs
src/pages/: characters.rs  inherent.rs  keywords.rs  mod.rs  paths.rs  skill_filter.rs
src/panels/: builder.rs  home.rs  inherent.rs  keyword.rs  mod.rs  navbar.rs  path.rs  rulebook.rs  sheet.rs  skill.rs  skills.rs
src/path/: components.rs  feature.rs  keystone.rs  mod.rs  ranked_bonus.rs  selection.rs  skills.rs
src/progression/: build.rs  fixed.rs  growth.rs  mod.rs  qualifier.rs  track.rs  training.rs
src/relic/: action.rs  duration.rs  mod.rs  resource.rs  rule.rs  skill.rs
src/rule/: bonus.rs  dice.rs  effect.rs  element.rs  mod.rs  modifier.rs  roll.rs  snippet.rs  stack.rs  stat_block.rs  status_effect.rs  term.rs  tier.rs
src/rules/: bonus.rs  dice.rs  mod.rs  roll.rs  section.rs  snippet.rs  stack.rs  stat_block.rs
src/server/: client.rs  creature.rs  keyword.rs  mod.rs  path.rs  sheet.rs  signal.rs  skill.rs  skills.rs
src/skill/: activation.rs  (+7 more)
(+25 files in other folders)
