[package]
name = "relic-fullstack"
version = "0.1.0"
authors = ["abvanliew <ab.vanliew@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "3.1.0", features = ["serde"] }
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
futures = { version = "0.3.31", optional = true }
manganis-core = { version = "0.7.3", features = ["dioxus"] }
mongodb = { version = "3.5.0", optional = true }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.49.0"
tracing = "0.1.44"

[features]
default = []
web = [ "dioxus/web" ]
server = [ "dioxus/server", "mongodb", "dep:futures" ]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
